--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
+    <meta property="og:title" content="Sip Calculator">
+    <meta property="og:description" content="Know what your investment will look like if you invest smartly!...">
+    <meta property="og:image" content="./src/assets/DALL·E 2025-03-11 18.58.08 - A modern, minimalistic logo with the letters 'DY' in bold typography. The design should be sleek, using a monochrome color scheme (black and white) wi.webp
+    ">
     <title>Sip Calculator</title>
   </head>
   <body>
